fixed hero image, fixed responsive issues on mobile, changed animation to a fade instead of a slide, removed arrows and text from slide show

--- a/src/App.css
+++ b/src/App.css
@@ -73,27 +73,12 @@
 
 }
 .background-hero{
-  height: 70vh;
-  width:100vw; 
+  height: 85!important;
+  width:100%; 
   position: relative;
-  background-size:cover;
-}
-.overlay{
-  position:absolute;
-  height:100%;
-  width:100%;
-  top:0;
-  left:0;
-  background:rgba(0, 0, 0, 0);
-  color:#FBFCF5;
-  display:flex;
-  align-items:start;
-  text-align:left;
-  
 
-  justify-content: center;
-  flex-direction: column;
 }
+
 .salon{
   color:#4C5157;
   font-size:3vh;
